<resources>
    <string name="app_name">HefeHelfer Pro</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Heferechner</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home">Heferechner</string>
    <string name="menu_gallery">Tipps fürs Backen</string>
    <string name="menu_slideshow">Backen im Urlaub</string>
    <string name="menu_fach">Fachbegriffe</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_spenden">Unterstütze uns!</string>
    <string name="f.lass">Lass dir Zeit</string>
    <string name="f.immer">Immer wieder sieht man sogenannte „Express Rezepte“ fürs Brotbacken im Internet.\nDiese versprechen ein frisches, selbst gemachtes Brot innerhalb weniger Stunden – meist mithilfe von sehr großen Mengen Hefe. Das kann natürlich nützlich sein, wenn man spontan frisches Brot backen will und dafür kaum Zeit hat. \nSollte man jedoch regelmäßiger backen und Interesse an einem deutlich intensiveren Geschmack haben, rate ich dazu, auf die sogenannte „Langzeitführung“ umzusteigen. \nFür die optimale Hefemengen-Berechnung deines Lieblingsrezeptes dient dir dieser Rechner.</string>
    <string name="f.jedes">Jedes Brot verdient es, ausgebacken zu werden!</string>
    <string name="f.nichts">Nichts überstürzen</string>
    <string name="f.orga">Organisiere dich vor dem Backen</string>
    <string name="f.ruck">Rückschläge gehören dazu – auch beim Brotbacken.\n Besonders am Anfang wirst du viele Fehler machen: \n Versehentlich falsch verwendete Zutaten, fehlerhafte Mengenangaben oder eine klassische Übergare. \n Oftmals sieht der Teig danach aus, als müsste man ihn entsorgen. Mein Rat an dich: Gib dem Teig eine Chance und schieb ihn in den Ofen.\n \n Vielleicht überrascht dich das Ergebnis und du entdeckst ein neues Lieblingsprodukt.</string>
    <string name="f.dingen">Wie bei so vielen Dingen ist noch kein Meister vom Himmel gefallen. \n Das sollte dir auch bei der Auswahl des Rezeptes bewusst sein. Natürlich hören sich die Rezepte mit unfassbar vielen Zutaten wahnsinnig spannend an, trotzdem empfehle ich dir, zu Beginn mit kleineren Rezepten anzufangen. \n Sobald du ein Gefühl für verschiedene Teige hast und deine Basic-Rezepte funktionieren, kannst du zu fortgeschritteneren Rezepten übergehen und andere mit deinem Wissen begeistern. </string>
    <string name="f.teiglinge">Wann sind mein Teig oder meine Teiglinge fertig?</string>
    <string name="f.daumen">Besonders am Anfang ist es schwierig, ein Teiggefühl zu entwickeln.\n Wie lange muss ich meinen Teig noch kneten oder wie lange muss mein Teig ruhen. \n Das sind zwei Fragen, welche ich mir oft am Anfang gestellt habe. Dafür gibt es einfache Tricks: \n\n Knetzeit: Hierfür kannst du ein Teil vom Teig nehmen, der etwa walnussgroß ist und ihn zwischen deinen Händen halten. Ziehe das Teigstück mit beiden Händen vorsichtig und gefühlvoll auseinander, sodass sich eine dünne Teigschicht bildet. Diese Teigschicht sollte so dünn gezogen werden, dass Licht hindurchscheinen kann. Reißt diese dünne Teigschicht, ist der Teig  nicht genug geknetet.\n \n Gardauer: Für dieses „Problem“ gibt es die sogenannte Daumenprobe. \n Drücke mit deinem Daumen eine leichte Kerbe in deinen Teig/Teigling. \n Federt die Kerbe direkt zurück, ist der Teig nicht ganz bereit. \n Federt die Kerbe gar nicht in die Ursprungsform zurück, ist der Teig zu lange in der Gare. \n Für die optimale Gardauer, federt die Kerbe leicht zurück, jedoch nicht in die 100%ige Ausgangsform."</string>
    <string name="s.einwaagen">Keine Waage für die Einwaagen </string>
    <string name="s.mehl">Mehl ohne Waage auswiegen</string>
    <string name="s.Mehlvolumen">Mehlvolumen</string>
    <string name="s.Durchmesser">Durchmesser</string>
    <string name="s.Gramm">Gramm</string>
    <string name="s.Hefe">Hefe ohne Waage abwiegen</string>
    <string name="s.Knetmaschine">Kneten ohne Knetmaschine</string>
    <string name="s.Arbeitsfläche">Kneten mit Arbeitsfläche</string>
    <string name="s.ohneArbeitsflaeche">Kneten ohne Arbeitsfläche</string>
    <string name="s.Überschrift">Backen im Urlaub</string>
    <string name="s.BBQ">Wer kennt es nicht: Man fährt in den Urlaub und will passend zum BBQ ein Fladenbrot machen. Leider besitzt eure Ferienwohnung weder eine Waage noch eine Knetmaschine. Für diese Probleme gibt es verschiedene Lösungen. </string>
    <string name="s.go">Go</string>
    <string name="s.mehlwaage">Um das Mehl ohne Waage abzumessen, gibt es eine einfache Lösung: \n Du verwendest die Schüttdichte von Mehl. Die Schüttdichte gibt an, wie schwer eine Substanz auf ein bestimmtes Volumen gesehen ist. Wasser, als Beispiel, besitzt eine Schüttdichte von 1. Das bedeutet, dass 1000 ml Wasser 1 kg wiegen. \n Mehl hingegen ist leichter als Wasser. So wiegen 1000 ml Mehl nur ca. 500–600 g. Nun kannst du ein Behältnis – am besten mit Eichstrich – verwenden, um das Mehl abzuwiegen. \n Trage die Milliliter in den Rechner ein und dir wird die Gramm Anzahl berechnet.</string>
    <string name="s.Hefewaage">Um eine Hefemenge ohne Waage abzumessen, kannst du deine Frischhefe einfach zu einer Kugel formen. \n Je nach Durchmesser der Hefekugel, kann das Gewicht der Hefe geschätzt werden. \n Einfach mit dem Lineal auf dem Bildschirm die Größe (Millimeter) der Kugel abmessen und den Wert in den Rechner eingeben. Die Hefemenge wird dir in Gramm wiedergegeben.\n Dies sind natürlich keine absolut genauen Werte, aber für den Urlaub und deine spontane Backlust wird es reichen.</string>
    <string name="s.Schüssel">Falls dir kein Platz zum Kneten zur Verfügung steht, nutzt du eine Schüssel und einen Kochlöffel. Diese Variante basiert auf dem in der Industrie eingesetzten Hubkneter. \n Hierfür mischst du alle Zutaten in einer Schüssel und vermengst sie mit der Hand bzw. dem Kochlöffel. \n Im zweiten Schritt setzt du an einem Ende der Schüssel dein Rührgerät an und ziehst damit den Teig bis zur Mitte der Schüssel. Danach drehst du die Schüssel um ein paar Zentimeter, setzt wieder am Rand an und ziehst den Teig bis zur Mitte der Schüssel.\n Diesen Vorgang wiederholst du so lange, bis sich dein Teig gut dehnen lässt, ohne dabei zu zerreißen</string>
    <string name="s.Arbeitsflaeche">Hast du eine Arbeitsfläche zum Kneten, kannst du auf diese Variante zurückgreifen.\n Dort mischst du ebenfalls zu Beginn alle Zutaten. Hierfür kannst du auch eine Schüssel oder direkt deine Arbeitsfläche nutzen. Dieses Verfahren basiert auf der Grundlage eines Sprialkneters, bei dem eine Kräfte-Einwirkung von oben nach unten entsteht. \n Dafür greifst du mit der Hand unter den Teig und faltest ihn über sich selbst. Anschließend wird das gefaltete Teigstück von oben nach unten in den Teig gedrückt.\n Nach diesem Schritt, wird die Schüssel ein paar Zentimeter gedreht und der Knetprozess beginnt von vorn: Du greifst unter den Teig, faltest ihn über sich selbst und drückst das gefaltete Stück in den restlichen Teig hinein</string>
    <string name="s.Kneter">Um einen Teig ohne Kneter herzustellen, kann man sich an den Wirkungsweisen der Industriekneter orientieren.\n Für den Urlaub eignen sich zwei Verfahren, die sich dadurch unterscheiden, ob dir eine Arbeitsplatte zum Kneten zur Verfügung steht oder nicht.\n Bei beiden Methoden ist zu beachten, dass die Knetzeit länger als mit der Knetmaschine ist. Um ungefähr abzuschätzen, wann dein Teig lang genug geknetet wurde, gibt es die sogenannte Fensterprobe. (siehe -Tipps-Wann sind mein Teig oder meine Teiglinge fertig?)</string>
    <string name="h.Hefeberechnung">Hefe \n berechnung</string>
    <string name="h.Mehlgewicht">Mehl\ngewicht</string>
    <string name="h.inGramm">in Gramm</string>
    <string name="h.Teigruhe">Teigruhe\n(h:min)</string>
    <string name="h.h">h</string>
    <string name="h.min">min</string>
    <string name="h.Temperatur">Temperatur\nin °C</string>
    <string name="h.C">in °C</string>
    <string name="h.berechnen">Berechnen</string>
    <string name="h.frischhefe">Frischhefe</string>
    <string name="h.oder">oder</string>
    <string name="h.Trockenhefe">Trockenhefe </string>
    <string name="h.Sauerteihg">Sauerteig </string>
    <string name="h.Teigruhebeendet">Teigruhe ist beendet, um:</string>
    <string name="e.Uschrift">Einstellungen</string>
    <string name="Frage">?</string>
    <string name="w.Fachbegriffe">Fachbegriffe</string>
    <string name="w.Woerter">Besonders am Anfang werden dir viele Fremdwörter begegnen, die du bisher nicht kennst. Um dir den Start zu erleichtern, liste ich dir die für mich wichtigsten Fachbegriffe auf und erkläre sie dir.</string>
    <string name="w.Stockgare">Stockgare:</string>
    <string name="w.vordemformen">Die Ruhezeit des Teiges nach dem Kneten, aber vor dem Formen.</string>
    <string name="w.Stueckgare">Stückgare:</string>
    <string name="w.vordembacken">Die Ruhezeit nach dem Formen des Teiges, aber noch vor dem Backen.</string>
    <string name="w.Schwaden">Schwaden:</string>
    <string name="VorstellungMichi">"Mein Name ist Michi. Meine berufliche Reise begann mit einer Ausbildung zur Fachkraft für Lebensmitteltechnik. Schon damals war mir klar, dass ich meine Leidenschaft für Lebensmittel und Technik verbinden möchte, um innovative Produkte zu entwickeln und die Lebensmittelindustrie voranzubringen. \n In den folgenden zwei Jahren durfte ich im Bereich Qualitätswesen tätig sein und habe so einen tiefen Einblick in die Prozesse und Standards gewonnen, die für die Herstellung hochwertiger und sicherer Lebensmittel unerlässlich sind. \n Nach meiner Ausbildung habe ich mich weitergebildet und den Techniker in der Fachrichtung Lebensmitteltechnik abgeschlossen. Nun stehe ich kurz vor einem neuen Kapitel in meinem beruflichen Werdegang: \n Demnächst werde ich ein Biochemie-Studium beginnen. Ich freue mich sehr auf diese Herausforderung, da ich dadurch mein Wissen erweitern und vertiefen kann, um noch tiefer in die wissenschaftlichen Aspekte der Lebensmittelentwicklung einzutauchen.\n Abseits meiner beruflichen Laufbahn sind Fussball und Musikverein meine großen Leidenschaften. Im Fußball habe ich nicht nur die Möglichkeit, mich sportlich zu betätigen, sondern auch im Team zu arbeiten und gemeinsam Ziele zu erreichen. In meiner Freizeit bin ich immer offen für neue Erfahrungen. Gerne unternehme ich Wanderungen, um die Natur zu genießen und probiere mich auch gerne in der Küche aus, um neue Rezepte zu kreieren. "</string>
    <string name="VorstelungSebi">Mein Name ist Sebi. Mein Weg begann mit dem Abitur am Technischen Gymnasium, an dem ich meine Begeisterung für Technologie und Innovation entdeckte.\n Anschließend folgte mein Studium der Informatik, das mich in die faszinierende Welt der Programmierung und digitalen Technologien eingeführt hat.\n Während meines Studiums entwickelte ich eine besondere Leidenschaft für den Bereich des autonomen Fahrens. Die Idee, Fahrzeuge mithilfe von künstlicher Intelligenz und fortschrittlichen Algorithmen selbstständig navigieren zu lassen, fasziniert mich ungemein. Es ist ein Gebiet, das ständig wächst und die Zukunft der Mobilität maßgeblich beeinflussen wird. \n Neben meiner beruflichen Laufbahn bin ich ein begeisterter Mountainbiker. Die Natur zu erkunden und den Nervenkitzel des Geländefahrens zu erleben, gibt mir die nötige Auszeit vom hektischen Alltag. Es hilft mir, den Kopf freizubekommen und neue Energie zu tanken, um mich in meinen Projekten und Herausforderungen zu engagieren.</string>
    <string name="Rezeptrechner">Rezeptrechner</string>
    <string name="keinlauf">noch kein Keks erworben</string>
    <string name="Rezepte">Rezepte</string>
</resources>