<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pro.example.pro.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="pro.example.pro.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pro.example.pro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_fach"
        android:name="pro.example.pro.ui.fach.fach"
        android:label="@string/menu_fach"
        tools:layout="@layout/fragment_fach"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="pro.example.pro.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/nav_spenden"
        android:name="pro.example.pro.ui.spenden.SpendenFragment"
        android:label="@string/menu_spenden"
        tools:layout="@layout/fragment_spenden"/>

    <fragment
        android:id="@+id/nav_rechner"
        android:name="pro.example.pro.ui.rechner.RechnerFragment"
        android:label="@string/rechner.Rezeptrechner"
        tools:layout="@layout/fragment_rechner"/>

    <fragment
        android:id="@+id/nav_rezepte"
        android:name="pro.example.pro.ui.rezepte.RezepteFragment"
        android:label="@string/Rezepte"
        tools:layout="@layout/fragment_rezepte"/>

</navigation>
