<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hyphenationFrequency="full">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/headlineTextView2"
        app:layout_constraintTop_toBottomOf="@+id/headlineTextView2"
        tools:context=".SettingsFragment">

        <TextView
            android:id="@+id/ueberschrift2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/menu_spenden"
            android:textSize="40dp"
            android:textStyle="bold|italic"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headlineTextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:focusableInTouchMode="true"

            android:text="@string/settings.Entwickler"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ueberschrift2" />

        <TextView
            android:id="@+id/headlineTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:text="@string/settings.michi"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView1" />

        <TextView
            android:id="@+id/headlineTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:minHeight="48dp"
            android:text="@string/settings.sebi"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools:layout_editor_absoluteX="16dp" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VorstellungMichi"
            android:textAlignment="center"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView2" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VorstelungSebi"
            android:textAlignment="center"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView3" />

        <TextView
            android:id="@+id/headlineTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:background="@drawable/textview_border"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"


            android:text="@string/spenden.unterstuetzen"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spenden.arten"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView6" />
        <TextView
            android:id="@+id/headlineTextView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:background="@drawable/textview_border"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:text="@string/spenden.keks"
    android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView22"        />


        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/button4"
            android:layout_width="147dp"
            android:layout_height="100dp"
            android:background="@drawable/button_background_3d"
            android:text="@string/spenden.Kaffeekasse"
            android:autoSizeTextType="uniform"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/button5"
            android:layout_width="147dp"
            android:layout_height="100dp"
            android:text="@string/spenden.kostenloser"
            android:background="@drawable/button_background_3d"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:onClick="click"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/button6"
            android:layout_width="147dp"
            android:layout_height="100dp"
            android:background="@drawable/button_background_3d"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/spenden.buttonKeks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spenden.txtkeks"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView7" />

        <TextView
            android:id="@+id/headlineTextView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:text="@string/spenden.kostenloser"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spenden.txtkostenkeks"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView8" />

        <TextView
            android:id="@+id/headlineTextView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:focusable="true"

            android:focusableInTouchMode="true"

            android:text="@string/spenden.GeldfürunsereKaffeekasse"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView23"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spenden.txtKaffekasse"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headlineTextView9" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="25mm"
            android:fontFamily="@font/mystic"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/keks"
            android:hyphenationFrequency="full"
            android:hint="@string/keinlauf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="25mm"
            android:gravity="center"
            android:hyphenationFrequency="full"
            android:fontFamily="@font/mystic"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/keinlauf"
            android:background="@drawable/keks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
